--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="push">お問い合わせ</button>
         </div>
         <div class="advantage">
-            <h2>co²supの機能</h2>
+            <h2>co²supの魅力</h2>
             <div>
                 <img src="img/graph.jpg" alt="">
                 <div>
