一部文言を追加
もうなんかさ〜！！

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="push">お問い合わせ</button>
         </div>
         <div class="advantage">
-            <h2>co²supの魅力</h2>
+            <h2>co²supの機能</h2>
             <div>
                 <img src="img/graph.jpg" alt="">
                 <div>
@@ -50,6 +50,27 @@
                     </p>
                 </div>
                 <img src="img/responsive.png" alt="">
+            </div>
+            <div>
+                <img src="img/camera.png" alt="">
+                <div>
+                    <h3>あなたの気づかない不調にも寄り添う。</h3>
+                    <p>
+                        パソコンのカメラを用いて、疲労度を測定。<br>
+                        カメラで顔を認識し、自律神経の状態を把握することで、疲労度を評価します。<br>
+                        メンタルヘルス問題の予防や労働の生産性の向上が見込めます。
+                    </p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>毎日の質問で、あなたに寄り添う。</h3>
+                    <p>
+                        厚生労働省が推奨しているストレスチェック調査を手軽にアプリから受けられます。<br>
+                        毎日のアンケート回答を分析し、月終わりに利用者一人一人に適したストレスケアを提案します。
+                    </p>
+                </div>
+                <img src="img/enquate.png" alt="">
             </div>
         </div>
         <div class="price">
