--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="name">co<sup>2</sup>sup</p>
             <button class="push">お問い合わせ</button>
         </div>
-        <div class="advantage">
+        <div class="advantage" style="background-color: transparent;">
             <h2>co²supの機能</h2>
             <div>
                 <img src="img/graph.jpg" alt="">
@@ -51,6 +51,9 @@
                 </div>
                 <img src="img/responsive.png" alt="">
             </div>
+        </div>
+        <div class="advantage">
+            <h2>co²supの魅力</h2>
             <div>
                 <img src="img/camera.png" alt="">
                 <div>
@@ -72,6 +75,21 @@
                 </div>
                 <img src="img/enquate.png" alt="">
             </div>
+            <div>
+                <img src="img/counseling.jpg" alt="">
+                <div>
+                    <h3>気軽なコミュニケーションで寄り添う。</h3>
+                    <p>
+                        指名したカウンセラーとオンライン上でカウンセリングを実施。<br>
+                        従来のカウンセリングよりも、スムーズにあなたの心をサポートします。
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="correlation">
+            <h2>新たなアプローチで、あなたに寄り添う。</h2>
+            <p>これまでの健康支援サービスとは違う新たな関係性で、あなたの健康を支援します。</p>
+            <img src="img/Correlation-diagram.png" alt="">
         </div>
         <div class="price">
             <h2>選べる2つのプラン</h2>
@@ -98,6 +116,9 @@
                     </ul>
                 </div>
             </div>
+        </div>
+        <div class="correlation" style="padding:0;">
+            <p>導入のお問い合わせはこちらから。</p>
         </div>
         <button class="push">お問い合わせ</button>
     </main>
